Fixed weird extra white space at bottom of page

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,7 @@ h3 {
 h4 {
   font-size: 1.6rem;
 }
+
+html {
+  max-height: 100vh;
+}
